fixed formatting for better readability.

--- a/style.less
+++ b/style.less
@@ -9,12 +9,6 @@
     .border-radius(12px);
     display: inline-block;
     margin-top: -10px;
-
-.navbar-nav {
-    .open {
-        background-color:@accentcolor;
-    }
-}
          
 }
 #PL {
